--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,9 @@ workflows:
       - codacy/sbt:
           name: test_and_coverage
           cmd: |
-            sbt ";coverage;test;coverageReport;coverageAggregate"
-            if [ -z ${CODACY_PROJECT_TOKEN+x} ]; then
-              echo "CODACY_PROJECT_TOKEN not found. Skipping send coverage to Codacy."
-            else
-              bash <(curl -Ls https://coverage.codacy.com/get.sh)
-            fi
+            sbt coverage test coverageReport
+            sbt coverageAggregate
+            bash <(curl -Ls https://coverage.codacy.com/get.sh) report --skip
           requires:
             - compile
       - codacy/sbt:
@@ -54,6 +51,19 @@ workflows:
           requires:
             - check_fmt
             - test_and_coverage
+      - codacy/shell:
+          name: docker_publish_local
+          cmd: |
+            docker build -t codacy-gosec .
+            docker save --output docker-image.tar $CIRCLE_PROJECT_REPONAME:latest
+          persist_to_workspace: true
+          requires:
+            - package_artifacts
+      - codacy/publish_docker:
+          name: publish_dockerhub
+          context: CodacyAWS
+          requires:
+            - docker_publish_local
       - codacy/publish_ghr:
           name: publish_ghr
           path: ~/workdir/artifacts/
